<resources>
    <string name="app_name">project 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Past Booking</string>
    <string name="menu_slideshow">Future Booking</string>
    <string name="menu_tools">Upcoming</string>
    <string name="visit_us">Visit Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_passport_activity">Passport_activity</string>
    <string name="passprort_brief">6.1 Please read the Passport Instruction Booklet carefully before filling the form.
        Furnishing of incorrect information/ suppression of information would lead to rejection of the application
        and would attract penal provisions as prescribed under the Passports Act, 1967. Please produce your original documents at the time of submission of the form.</string>
    <string name="otherfirst">Have you ever been charged with criminal proceedings or any arrest warrant/summon pending before a court in India?</string>
    <string name="othersecond">6.2 Have you at any time during the period of 5 years immediately preceding the date of this application been convicted by a court in India for any criminal offence and
sentenced to imprisonment for two years or more?</string>
    <string name="otherthird">6.3 Have you ever been refused or denied passport?</string>
    <string name="otherfourth">6.4 Has your Passport ever been Impounded or Revoked?</string>
    <string name="otherfifth">6.5 Have you ever applied for/ been granted political asylum to/ by any foreign country?</string>
    <string name="othersixth">6.6 Have you ever returned to India on Emergency Certificate (EC) or were ever deported
or repatriated?</string>
    <string name="self_declaration">I owe allegiance to the sovereignty, unity and integrity of India, and have not voluntarily acquired citizenship or
travel document of any other country. I have not lost, surrendered or been deprived of the citizenship of India
and I affirm that the information given by me in this form and the enclosures is true and I am solely
responsible for its accuracy, and I am liable to be penalized or prosecuted if found otherwise. I am aware that
under the Passports Act, 1967 it is a criminal offence to furnish any false information or to suppress any
material information with a view to obtaining p assport or travel document.</string>
</resources>
